--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,7 @@
 				<a href="tambahadmin.html">Bantuan</a>
 			</div>
 			<div class="link-menu">
-				<a href="tambahadmin.html">Keluar</a>
+				<a href="login.html">Keluar</a>
 			</div>
 	  </div>	
 	  <main class="mdl-layout__content">
