--- a/www/login.html
+++ b/www/login.html
@@ -10,7 +10,7 @@
 <body>
 	<h4 style="text-align:center;margin:0px;padding-top:20vh;">Masuk</h1>
 	<h3 style="text-align:center;margin:0px;">Kantin</h3>
-	<form action="#" style="margin-left:40px;margin-right:40px;">
+	<form action="index.html" style="margin-left:40px;margin-right:40px;">
 	  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 		<input class="mdl-textfield__input" type="text" id="sample3">
 		<label class="mdl-textfield__label" for="sample3">Username</label>
@@ -22,7 +22,7 @@
 		<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
 			Masuk
 		</button>
-		<button class="mdl-button mdl-js-button mdl-button--accent" style="float:right;">
+		<button type="submit" class="mdl-button mdl-js-button mdl-button--accent" style="float:right;">
 		  Lupa Password
 		</button>
 	</form>
